# btsrch

./: .gitignore  Cargo.toml  README.md  btsrch.sh  todo.txt
src/: app_parser.rs  config.rs  custom_commands_parser.rs  link_parser.rs  main.rs  path_parser.rs  query_manager.rs  search_helper.rs  test_parser.rs  unicode_parser.rs
src/unit_calc_parser/: lexer.rs  main.rs  unit_number_parser.rs
